versioned_docs/version-3.12/releases/release-notes.mdx
---
tags:
  - Community
  - Enterprise Standard
  - Enterprise Premium
---

# ScalarDB 3.12 Release Notes

This page includes a list of release notes for ScalarDB 3.12.

## v3.12.8

**Release date:** July 16, 2025

### Summary

This release includes several bug fixes and vulnerability fixes.

### Community edition

#### Bug fixes

- Added exception handling for DateTimeParseException on column value conversion ([#2662](https://github.com/scalar-labs/scalardb/pull/2662))  
- Fixed potential connection leak when using `jdbc` storage and Scan operation fails because the target table doesn't exist ([#2766](https://github.com/scalar-labs/scalardb/pull/2766))
- Fixed error handling for mutations in Cassandra. ([#2827](https://github.com/scalar-labs/scalardb/pull/2827))

### Enterprise edition

#### Bug fixes

##### ScalarDB Cluster

- Upgraded the `jetty` library to fix a security issue. [CVE-2024-13009](https://github.com/advisories/GHSA-q4rv-gq96-w7c5 "CVE-2024-13009")
- Upgraded `grpc_health_probe` to fix a security issue. [CVE-2025-22874](https://github.com/advisories/GHSA-6f52-wpx2-hvf2 "CVE-2025-22874")

## v3.12.7

**Release date:** May 15, 2025

### Summary

This release includes a vulnerability fix.

### Enterprise edition

#### Bug fixes

##### ScalarDB Cluster

- Upgraded `grpc_health_probe` to fix a security issue. [CVE-2025-22869](https://github.com/advisories/GHSA-hcg3-q754-cr77)

## v3.12.6

**Release date:** March 24, 2025

### Summary

This release has several improvements and bug fixes.

### Community edition

#### Improvements

- ScalarDB BIGINT datatype will now be mapped to Oracle's NUMBER(16). ([#2566](https://github.com/scalar-labs/scalardb/pull/2566))

#### Bug fixes

- Upgraded the Netty library to fix a security issue. [CVE-2025-24970](https://github.com/advisories/GHSA-4g8c-wm8x-jfhw "CVE-2025-24970") ([#2552](https://github.com/scalar-labs/scalardb/pull/2552))

### Enterprise edition

#### Bug fixes

##### ScalarDB Cluster

- Upgraded `grpc_health_probe` to fix security issues. [CVE-2024-45337](https://github.com/advisories/GHSA-v778-237x-gjrc "CVE-2024-45337") [CVE-2024-45338](https://github.com/advisories/GHSA-w32m-9786-jp63 "CVE-2024-45338")
- Fixed a bug related to the metadata cache behavior when using auth in the SQL interface.

##### ScalarDB SQL

- Fix an issue causing the SQL statement parser to reject negative numeric literal for columns of type INT and BIGINT.

## v3.12.5

**Release date:** January 23, 2025

### Summary

This release has several improvements and bug fixes.

### Community edition

#### Improvements

- ScalarDB now supports MySQL 8.4 and 8.0; PostgreSQL 17, 16, 15, 14, and 13; Amazon Aurora PostgreSQL 16, 15, 14, and 13; and Amazon Aurora MySQL 3 and 2. (#2302)

#### Bug fixes

- Added validation for primary key columns in the Cosmos DB adapter. The validation ensures that the text values of the primary key columns do not contain illegal characters (`:`, `/`, `\`, `#`, and `?`). (#2292)
- Fixed the behavior when deleting a non-existing record in the Cosmos adapter. (#2341)
- Fixed bugs in GetBuilder and ScanBuilder. (#2352)

### Enterprise edition

#### Bug fixes

##### ScalarDB SQL

- [Spring Data JDBC For ScalarDB] Fixed a bug regarding the `existsById()` API not working.

## v3.12.4

**Release date:** October 13, 2024

### Summary

This release includes several bug fixes, and vulnerability fixes.

### Community edition

#### Enhancements

- Added support for MariaDB 11.4 and Oracle 19. ([#2061](https://github.com/scalar-labs/scalardb/pull/2061))

#### Bug fixes

- Fixed a bug where `NullPointerException` when a table specified in a Get/Scan object is not found in Consensus Commit. ([#2083](https://github.com/scalar-labs/scalardb/pull/2083))
- Upgraded the mysql driver to fix security issues. [CVE-2023-22102](https://github.com/advisories/GHSA-m6vm-37g8-gqvh "CVE-2023-22102") ([#2238](https://github.com/scalar-labs/scalardb/pull/2238))
- Upgraded the gRPC library, the Protocol Buffers library, grpc_health_probe, and scalar-admin to fix security issues. [CVE-2024-7254](https://github.com/advisories/GHSA-735f-pc8j-v9w8 "CVE-2024-7254"), [CVE-2024-25638](https://github.com/advisories/GHSA-cfxw-4h78-h7fw "CVE-2024-25638"), and [CVE-2024-34156](https://github.com/advisories/GHSA-crqm-pwhx-j97f "CVE-2024-34156") ([#2277](https://github.com/scalar-labs/scalardb/pull/2277))

### Enterprise edition

#### Bug fixes

##### ScalarDB Cluster

- Fixed a bug where incorrect results are returned when executing SELECT queries with the same column names.
- Fix a bug where `NullPointerException` occurs when catching an exception without message.
- Upgraded `grpc_health_probe` to fix a security issue. [CVE-2024-34156](https://github.com/advisories/GHSA-crqm-pwhx-j97f "CVE-2024-34156")
- Upgraded `scalar-admin` to fix a security issue. [CVE-2024-25638](https://github.com/advisories/GHSA-cfxw-4h78-h7fw "CVE-2024-25638")
- Upgraded the Protobuf Java library to fix a security issue. [CVE-2024-7254](https://github.com/advisories/GHSA-735f-pc8j-v9w8 "CVE-2024-7254")

##### ScalarDB GraphQL

- Upgraded the GraphQL Java library to fix security issues. [CVE-2024-40094](https://github.com/advisories/GHSA-h9mq-f6q5-6c8m "CVE-2024-40094")

## v3.12.3

**Release date:** July 3, 2024

### Summary

This release includes several improvements, bug fixes, and vulnerability fixes.

### Community edition

#### Improvements

- Refactored scan with filtering. ([#1715](https://github.com/scalar-labs/scalardb/pull/1715))
- Changed the hard-coded password for the Oracle user to a more secure one in the JDBC adapter. ([#1765](https://github.com/scalar-labs/scalardb/pull/1765))
- Update base image of container image. This update fixes an OOM issue on a Kubernetes with cgroup v2 environment. In the previous versions, if you use a Kubernetes cluster with cgroup v2, you might face an OOM-killed issue. ([#1826](https://github.com/scalar-labs/scalardb/pull/1826))

#### Bug fixes

- Fixed a bug where `NullPointerException` occurs during the `EXTRA_READ` validation when scanning records in a transaction, but some of them are deleted by other transactions. ([#1624](https://github.com/scalar-labs/scalardb/pull/1624))
- Fixed a bug where lazy recovery was not executed for the implicit pre-read of put and delete operations. ([#1681](https://github.com/scalar-labs/scalardb/pull/1681))
- Fixed a bug where users could see inconsistent results when scanning records by an index key after putting the related records in Consensus Commit transactions. ([#1727](https://github.com/scalar-labs/scalardb/pull/1727))
- Upgraded `grpc_health_probe` to fix security issues. [CVE-2024-24790](https://github.com/advisories/GHSA-49gw-vxvf-fc2g "CVE-2024-24790"), [CVE-2023-45283](https://github.com/advisories/GHSA-vvjp-q62m-2vph "CVE-2023-45283"), and [CVE-2023-45288](https://github.com/advisories/GHSA-4v7x-pqxf-cx7m "CVE-2023-45288") ([#1980](https://github.com/scalar-labs/scalardb/pull/1980))
- Fixed snapshot management issues. ([#1976](https://github.com/scalar-labs/scalardb/pull/1976))
- Fix a bug of the import-table feature that it could access tables in other namespace that have the same table name when using MySQL storage. For example, in the following situation, the metadata of the columns `pk_unexpected` and `col_unexpected` of `ns2.tbl1` are handled and the import-table feature fails due to unsupported data types. ([#2001](https://github.com/scalar-labs/scalardb/pull/2001))

### Enterprise edition

#### Improvements

##### ScalarDB Cluster

- Update base image of container image. This update fixes an OOM issue on a Kubernetes with cgroup v2 environment. In the previous versions, if you use a Kubernetes cluster with cgroup v2, you might face an OOM-killed issue.

##### ScalarDB GraphQL

- Update base image of container image. This update fixes an OOM issue on a Kubernetes with cgroup v2 environment. In the previous versions, if you use a Kubernetes cluster with cgroup v2, you might face an OOM-killed issue.

##### ScalarDB SQL

- Changed the packages for `ConditionSetBuilder` and `AndConditionSet`.
- Update base image of container image. This update fixes an OOM issue on a Kubernetes with cgroup v2 environment. In the previous versions, if you use a Kubernetes cluster with cgroup v2, you might face an OOM-killed issue.

#### Bug fixes

##### ScalarDB Cluster

- Upgraded `grpc_health_probe` to fix security issues. [CVE-2024-24790](https://github.com/advisories/GHSA-49gw-vxvf-fc2g "CVE-2024-24790"), [CVE-2023-45283](https://github.com/advisories/GHSA-vvjp-q62m-2vph "CVE-2023-45283"), and [CVE-2023-45288](https://github.com/advisories/GHSA-4v7x-pqxf-cx7m "CVE-2023-45288")

##### ScalarDB SQL

- Fixed a bug where incorrect results are returned when executing SELECT queries with the same column names.
- Upgraded `grpc_health_probe` to fix security issues. [CVE-2024-24790](https://github.com/advisories/GHSA-49gw-vxvf-fc2g "CVE-2024-24790"), [CVE-2023-45283](https://github.com/advisories/GHSA-vvjp-q62m-2vph "CVE-2023-45283"), and [CVE-2023-45288](https://github.com/advisories/GHSA-4v7x-pqxf-cx7m "CVE-2023-45288")

## v3.12.2

**Release date:** April 1, 2024

### Summary

This release includes several improvements, including error message improvements and a vulnerability fix.

### Community edition

#### Improvements

- Added error codes to the error messages of Schema Loader. ([#1564](https://github.com/scalar-labs/scalardb/pull/1564))

### Enterprise edition

#### Improvements

##### ScalarDB Cluster

- Added error codes to the error messages of the authentication and authorization module.
- Added error codes to the error messages.
- Added TLS support for the Prometheus exporter. With this change, when enabling TLS (setting `scalar.db.cluster.tls.enabled` to `true`) in ScalarDB cluster nodes, the Prometheus exporter also starts with TLS (HTTPS).

##### ScalarDB GraphQL

- Added error codes to the error messages.

##### ScalarDB SQL

- Added error codes to the error messages.

#### Bug fixes

##### ScalarDB Cluster

- Upgraded the Kubernetes Client Java lib to fix security issues: [CVE-2024-25710](https://github.com/advisories/GHSA-4g9r-vxhx-9pgx "CVE-2024-25710") and [CVE-2024-26308](https://github.com/advisories/GHSA-4265-ccf5-phj5 "CVE-2024-26308").

## v3.12.1

**Release date:** February 26, 2024

### Summary

This release has a small improvement and several bug and vulnerability fixes.

### Community edition

#### Improvements

- Removed the hard-coded collation for MySQL and SQL Server in the JDBC adapter. As a result, the collation configured in the underlying database will be used when creating tables. ([#1518](https://github.com/scalar-labs/scalardb/pull/1518))

#### Bug fixes

- Upgraded the base image to fix security issues. [CVE-2023-47038](https://github.com/advisories/GHSA-96fh-9q43-rmjh "CVE-2023-47038") ([#1522](https://github.com/scalar-labs/scalardb/pull/1522) [#1521](https://github.com/scalar-labs/scalardb/pull/1521))
- Upgraded the PostgresSQL lib to fix security issues. [CVE-2024-1597](https://github.com/advisories/GHSA-24rp-q3w6-vc56 "CVE-2024-1597") ([#1547](https://github.com/scalar-labs/scalardb/pull/1547))

### Enterprise edition

#### Bug fixes

##### ScalarDB Cluster

- Upgraded the base image to fix security issues. [CVE-2023-47038](https://github.com/advisories/GHSA-96fh-9q43-rmjh "CVE-2023-47038")

##### ScalarDB GraphQL

- Upgraded the base image to fix security issues. [CVE-2023-47038](https://github.com/advisories/GHSA-96fh-9q43-rmjh "CVE-2023-47038")

##### ScalarDB SQL

- Upgraded the base image to fix security issues. [CVE-2023-47038](https://github.com/advisories/GHSA-96fh-9q43-rmjh "CVE-2023-47038")

## v3.12.0

**Release date:** February 17, 2024

### Summary

This release has several enhancements, improvements, and bug fixes.

### Community edition

#### Enhancements

- Made Cosmos DB consistency level configurable in the Cosmos DB adapter. Users can change the consistency level used for Cosmos DB operations by specifying the property `scalar.db.cosmos.consistency_level`. `STRONG` or `BOUNDED_STALENESS` can be specified. (#1470)

#### Improvements

- Added error codes to the error messages. (#1493)

#### Bug fixes

- Improved some error handling to avoid potential NPE in JDBC storages. (#1442)
- Fixed a bug where lazy recovery is not performed when uncommitted records are read while executing implicit pre-read. (#1476)

### Enterprise edition

#### Enhancements

##### ScalarDB Cluster

- Added support for wire encryption using TLS. When you enable authentication and authorization, you should enable wire encryption in production environments to protect the user credentials.
- Added an expiration time for the authentication and authorization token to the response of the `AuthLogin.Login` endpoint.

#### Improvements

##### ScalarDB GraphQL

- Updated several libraries.

##### ScalarDB SQL

- Updated several libraries.

#### Bug fixes

##### ScalarDB Cluster

- Fixed a bug where the table or namespace privilege is not handled correctly.
