versioned_docs/version-3.13/releases/release-notes.mdx
---
tags:
  - Community
  - Enterprise Standard
  - Enterprise Premium
displayed_sidebar: docsEnglish
---

# ScalarDB 3.13 Release Notes

This page includes a list of release notes for ScalarDB 3.13.

## v3.13.6

**Release date:** November 26, 2025

### Summary

This release includes several bug fixes and vulnerability fixes.

### Community edition

#### Enhancements

- Add integration tests for Cassandra 4 and 5. ([#3143](https://github.com/scalar-labs/scalardb/pull/3143))

#### Bug fixes

- Upgraded the Cosmos DB library to fix a security issue. [CVE-2025-55163](https://github.com/advisories/GHSA-prj3-ccx8-p6x4 "CVE-2025-55163") ([#3105](https://github.com/scalar-labs/scalardb/pull/3105))
- Upgraded the SQLServer driver to fix a security issue. [CVE-2025-59250](https://github.com/advisories/GHSA-m494-w24q-6f7w "CVE-2025-59250") ([#3223](https://github.com/scalar-labs/scalardb/pull/3223))

### Enterprise edition

#### Bug fixes

##### ScalarDB Cluster

- Fixed a bug where `ResultSet` in SQL API returned incorrect results when duplicate column names were present.
- Upgraded the gRPC library to fix a security issue. [CVE-2025-55163](https://github.com/advisories/GHSA-prj3-ccx8-p6x4 "CVE-2025-55163")
- Upgraded `grpc_health_probe` to fix security issues: [CVE-2025-47907](https://github.com/advisories/GHSA-j5pm-7495-qmr3 "CVE-2025-47907"), [CVE-2025-58183](https://github.com/advisories/GHSA-9gcr-gp5f-jw27 "CVE-2025-58183"), [CVE-2025-58186](https://github.com/advisories/GHSA-rjcg-56ph-3qvg "CVE-2025-58186"), [CVE-2025-58187](https://github.com/advisories/GHSA-frhw-mqj2-wxw2 "CVE-2025-58187"), and [CVE-2025-58188](https://github.com/advisories/GHSA-7wwx-xj66-r44x "CVE-2025-58188").

## v3.13.5

**Release date:** July 16, 2025

### Summary

This release includes several bug fixes and vulnerability fixes.

### Community edition

#### Bug fixes

- Added exception handling for DateTimeParseException on column value conversion ([#2662](https://github.com/scalar-labs/scalardb/pull/2662))
- Fixed potential connection leak when using `jdbc` storage and Scan operation fails because the target table doesn't exist ([#2766](https://github.com/scalar-labs/scalardb/pull/2766))
- Fixed error handling for mutations in Cassandra. ([#2827](https://github.com/scalar-labs/scalardb/pull/2827))

### Enterprise edition

#### Bug fixes

##### ScalarDB Cluster

- Fixed a memory leak issue when the coordinator group commit feature is enabled.
- Upgraded the `jetty` library to fix a security issue. [CVE-2024-13009](https://github.com/advisories/GHSA-q4rv-gq96-w7c5 "CVE-2024-13009")
- Upgraded `grpc_health_probe` to fix a security issue. [CVE-2025-22874](https://github.com/advisories/GHSA-6f52-wpx2-hvf2 "CVE-2025-22874")

## v3.13.4

**Release date:** May 15, 2025

### Summary

This release includes fixes for vulnerabilities and bugs.

### Community edition

#### Bug fixes

- Fixed an issue with `DistributedStorageAdmin.getNamespaceNames()` API when using the DynamoDB storage with the namespace prefix setting `scalar.db.dynamo.namespace.prefix`. The namespace names returned by this method wrongly contained the prefix. ([#2641](https://github.com/scalar-labs/scalardb/pull/2641))

### Enterprise edition

#### Bug fixes

##### ScalarDB Cluster

- Upgraded `grpc_health_probe` to fix a security issue. [CVE-2025-22869](https://github.com/advisories/GHSA-hcg3-q754-cr77)

## v3.13.3

**Release date:** March 24, 2025

### Summary

This release has several improvements and bug fixes.

### Community edition

#### Improvements

- ScalarDB BIGINT datatype will now be mapped to Oracle's NUMBER(16). ([#2566](https://github.com/scalar-labs/scalardb/pull/2566))

#### Bug fixes

- Upgraded the Netty library to fix a security issue. [CVE-2025-24970](https://github.com/advisories/GHSA-4g8c-wm8x-jfhw "CVE-2025-24970") ([#2552](https://github.com/scalar-labs/scalardb/pull/2552))

### Enterprise edition

#### Bug fixes

##### ScalarDB Cluster

- Upgraded `grpc_health_probe` to fix security issues. [CVE-2024-45337](https://github.com/advisories/GHSA-v778-237x-gjrc "CVE-2024-45337") [CVE-2024-45338](https://github.com/advisories/GHSA-w32m-9786-jp63 "CVE-2024-45338")
- Fixed a bug related to the metadata cache behavior when using auth in the SQL interface.

##### ScalarDB SQL

- Fix an issue causing the SQL statement parser to reject negative numeric literal for columns of type INT and BIGINT.

## v3.13.2

**Release date:** January 23, 2025

### Summary

This release has several improvements and bug fixes.

### Community edition

#### Improvements

- ScalarDB now supports MySQL 8.4 and 8.0; PostgreSQL 17, 16, 15, 14, and 13; Amazon Aurora PostgreSQL 16, 15, 14, and 13; and Amazon Aurora MySQL 3 and 2. (#2302)

#### Bug fixes

- Added validation for primary key columns in the Cosmos DB adapter. The validation ensures that the text values of the primary key columns do not contain illegal characters (`:`, `/`, `\`, `#`, and `?`). (#2292)
- Fixed the behavior of multiple mutations for the same record in a transaction in Consensus Commit. (#2340)
- Fixed the behavior when deleting a non-existing record in the Cosmos adapter. (#2341)
- Fixed bugs in GetBuilder and ScanBuilder. (#2352)

### Enterprise edition

#### Bug fixes

##### ScalarDB SQL

- [Spring Data JDBC For ScalarDB] Fixed a bug regarding the `existsById()` API not working.

## v3.13.1

**Release date:** October 13, 2024

### Summary

This release includes several bug fixes, and vulnerability fixes.

### Community edition

#### Enhancements

- Added support for MariaDB 11.4 and Oracle 19. ([#2061](https://github.com/scalar-labs/scalardb/pull/2061))

#### Bug fixes

- Fixed a bug where `NullPointerException` when a table specified in a Get/Scan object is not found in Consensus Commit. ([#2083](https://github.com/scalar-labs/scalardb/pull/2083))
- Fixed a corner case issue that causes inconsistent Coordinator states when lazy recovery happens before group commit ([#2135](https://github.com/scalar-labs/scalardb/pull/2135))
- Upgraded the mysql driver to fix security issues. [CVE-2023-22102](https://github.com/advisories/GHSA-m6vm-37g8-gqvh "CVE-2023-22102") ([#2238](https://github.com/scalar-labs/scalardb/pull/2238))
- Upgraded the gRPC library, the Protocol Buffers library, grpc_health_probe, and scalar-admin to fix security issues. [CVE-2024-7254](https://github.com/advisories/GHSA-735f-pc8j-v9w8 "CVE-2024-7254"), [CVE-2024-25638](https://github.com/advisories/GHSA-cfxw-4h78-h7fw "CVE-2024-25638"), and [CVE-2024-34156](https://github.com/advisories/GHSA-crqm-pwhx-j97f "CVE-2024-34156") ([#2277](https://github.com/scalar-labs/scalardb/pull/2277))

### Enterprise edition

#### Enhancements

##### ScalarDB Cluster

- Support the group commit feature for Coordinator table in ScalarDB cluster

#### Improvements

##### ScalarDB GraphQL

- With this update, if `scalar.db.graphql.namespaces` is not specified, GraphQL server generates a GraphQL schema for all tables in all ScalarDB-managed namespaces.

#### Bug fixes

##### ScalarDB Cluster

- Fix a bug where `NullPointerException` occurs when catching an exception without message.
- Upgraded `grpc_health_probe` to fix a security issue. [CVE-2024-34156](https://github.com/advisories/GHSA-crqm-pwhx-j97f "CVE-2024-34156")
- Upgraded `scalar-admin` to fix a security issue. [CVE-2024-25638](https://github.com/advisories/GHSA-cfxw-4h78-h7fw "CVE-2024-25638")
- Upgraded the Protobuf Java library to fix a security issue. [CVE-2024-7254](https://github.com/advisories/GHSA-735f-pc8j-v9w8 "CVE-2024-7254")

## v3.13.0

**Release date:** July 8, 2024

### Summary

This release includes a lot of enhancements, improvements, bug fixes, and vulnerability fixes.

### Community edition

#### Enhancements

- Added dynamic arbitrary filtering for non-JDBC databases. ([#1682](https://github.com/scalar-labs/scalardb/pull/1682))
- Added the Insert, Upsert, and Update operations to the transactional API. ([#1697](https://github.com/scalar-labs/scalardb/pull/1697))
- Added YugabyteDB adapter as one of JDBC storages ([#1710](https://github.com/scalar-labs/scalardb/pull/1710))
- Added Group Commit feature for Coordinator Table ([#1728](https://github.com/scalar-labs/scalardb/pull/1728))
- Allowed directly executing CRUD operations with transaction managers. ([#1755](https://github.com/scalar-labs/scalardb/pull/1755))
- Added support for arbitrary filtering for partition scan and index scan. ([#1763](https://github.com/scalar-labs/scalardb/pull/1763))
- Added a single CRUD operation transaction manager. This transaction manager implementation does not allow beginning a transaction by calling `begin()`/`start()`. It only allows directly executing CRUD operations from the transaction manager. ([#1793](https://github.com/scalar-labs/scalardb/pull/1793))
- Added support for arbitrary filtering for get operations. ([#1834](https://github.com/scalar-labs/scalardb/pull/1834))
- In MySQL, ScalarDB `FLOAT` type is changed from `DOUBLE` to `REAL` (single-precision floating-point value) ([#2000](https://github.com/scalar-labs/scalardb/pull/2000))
- Added a new Admin API `admin.getNamespacesNames()` to list the user namespaces. Though, this API won't return a namespace that does not contain a table. From ScalarDB 4.0, we plan to improve the design to suppress this limitation. ([#2002](https://github.com/scalar-labs/scalardb/pull/2002))

#### Improvements

- Removed the hard-coded collation for MySQL and SQL Server in the JDBC adapter. As a result, the collation configured in the underlying database will be used when creating tables. ([#1518](https://github.com/scalar-labs/scalardb/pull/1518))
- Added error codes to the error messages of Schema Loader. ([#1564](https://github.com/scalar-labs/scalardb/pull/1564))
- Performance improvement of the group commit by using priority queue in the background worker. ([#1641](https://github.com/scalar-labs/scalardb/pull/1641))
- Refactored scan with filtering. ([#1715](https://github.com/scalar-labs/scalardb/pull/1715))
- Avoided creating an internal unique index as much as possible to reduce resource consumption and improve performance. ([#1723](https://github.com/scalar-labs/scalardb/pull/1723))
- Changed the hard-coded password for the Oracle user to a more secure one in the JDBC adapter. ([#1765](https://github.com/scalar-labs/scalardb/pull/1765))
- Update base image of container image. This update fixes an OOM issue on a Kubernetes with cgroup v2 environment. In the previous versions, if you use a Kubernetes cluster with cgroup v2, you might face an OOM-killed issue. ([#1826](https://github.com/scalar-labs/scalardb/pull/1826))
- Added capability to specify global properties for all storages in multi-storage. ([#1486](https://github.com/scalar-labs/scalardb/pull/1486))

#### Bug fixes

- Upgraded the base image to fix security issues. [CVE-2023-47038](https://github.com/advisories/GHSA-96fh-9q43-rmjh "CVE-2023-47038") ([#1522](https://github.com/scalar-labs/scalardb/pull/1522) [#1521](https://github.com/scalar-labs/scalardb/pull/1521))
- Upgraded the PostgresSQL lib to fix security issues. [CVE-2024-1597](https://github.com/advisories/GHSA-24rp-q3w6-vc56 "CVE-2024-1597") ([#1547](https://github.com/scalar-labs/scalardb/pull/1547))
- Fixed a bug where `NullPointerException` occurs during the `EXTRA_READ` validation when scanning records in a transaction, but some of them are deleted by other transactions. ([#1624](https://github.com/scalar-labs/scalardb/pull/1624))
- Fixed a bug where lazy recovery was not executed for the implicit pre-read of put and delete operations. ([#1681](https://github.com/scalar-labs/scalardb/pull/1681))
- Fixed a bug where users could see inconsistent results when scanning records by an index key after putting the related records in Consensus Commit transactions. ([#1727](https://github.com/scalar-labs/scalardb/pull/1727))
- Upgraded `grpc_health_probe` to fix security issues. [CVE-2024-24790](https://github.com/advisories/GHSA-49gw-vxvf-fc2g "CVE-2024-24790"), [CVE-2023-45283](https://github.com/advisories/GHSA-vvjp-q62m-2vph "CVE-2023-45283"), and [CVE-2023-45288](https://github.com/advisories/GHSA-4v7x-pqxf-cx7m "CVE-2023-45288") ([#1980](https://github.com/scalar-labs/scalardb/pull/1980))
- Fixed snapshot management issues. ([#1976](https://github.com/scalar-labs/scalardb/pull/1976))
- Fix a bug of the import-table feature that it could access tables in other namespace that have the same table name when using MySQL storage. ([#2001](https://github.com/scalar-labs/scalardb/pull/2001))

### Enterprise edition

#### Enhancements

##### ScalarDB Cluster

- Added support for the insert mode of the Put operation introduced [#1679](https://github.com/scalar-labs/scalardb/pull/1679) in ScalarDB Cluster.
- Added support for insert, upsert, and update APIs introduced in [#1697](https://github.com/scalar-labs/scalardb/pull/1697) in ScalarDB Cluster.
- Added support executing a CRUD operations in a one-shot transaction.
- Added support for arbitrary filtering for partition scan and index scan introduced in [#1763](https://github.com/scalar-labs/scalardb/pull/1763) to ScalarDB Cluster.
- Added support for transaction managers other than Consensus Commit to ScalarDB Cluster.
- Added support for the single CRUD operation transaction manager introduced in [#1793](https://github.com/scalar-labs/scalardb/pull/1793) in ScalarDB Cluster.
- Added support for arbitrary filtering for get operations introduced in [#1834](https://github.com/scalar-labs/scalardb/pull/1834) to ScalarDB Cluster.
- Added support for `DistributedTransactionAdmin.getNamespaceNames()`

##### ScalarDB SQL

- Added support for the single CRUD operation transaction manager introduced in [#1793](https://github.com/scalar-labs/scalardb/pull/1793) to ScalarDB SQL.
- With this update, users now have several ways to access ScalarDB-managed namespaces in ScalarDB SQL.

#### Improvements

##### ScalarDB Cluster

- Added error codes to the error messages of the authentication and authorization module.
- Added error codes to the error messages.
- Added TLS support for the Prometheus exporter. With this change, when enabling TLS (setting `scalar.db.cluster.tls.enabled` to `true`) in ScalarDB cluster nodes, the Prometheus exporter also starts with TLS (HTTPS).
- Update base image of container image. This update fixes an OOM issue on a Kubernetes with cgroup v2 environment. In the previous versions, if you use a Kubernetes cluster with cgroup v2, you might face an OOM-killed issue.

##### ScalarDB GraphQL

- Added error codes to the error messages.
- Update base image of container image. This update fixes an OOM issue on a Kubernetes with cgroup v2 environment. In the previous versions, if you use a Kubernetes cluster with cgroup v2, you might face an OOM-killed issue.

##### ScalarDB SQL

- Added error codes to the error messages.
- Changed the packages for `ConditionSetBuilder` and `AndConditionSet`.
- Allowed using the `EXISTS` keyword for the `CREATE/DROP COORDINATOR TABLES` statements.
- Update base image of container image. This update fixes an OOM issue on a Kubernetes with cgroup v2 environment. In the previous versions, if you use a Kubernetes cluster with cgroup v2, you might face an OOM-killed issue.
- Improved performance of selection queries with filtering by exploiting partition and index scans.

#### Bug fixes

##### ScalarDB Cluster

- Upgraded the base image to fix security issues. [CVE-2023-47038](https://github.com/advisories/GHSA-96fh-9q43-rmjh "CVE-2023-47038")
- Upgraded the Kubernetes Client Java lib to fix security issues: [CVE-2024-25710](https://github.com/advisories/GHSA-4g9r-vxhx-9pgx "CVE-2024-25710") and [CVE-2024-26308](https://github.com/advisories/GHSA-4265-ccf5-phj5 "CVE-2024-26308").
- Upgraded `grpc_health_probe` to fix security issues. [CVE-2024-24790](https://github.com/advisories/GHSA-49gw-vxvf-fc2g "CVE-2024-24790"), [CVE-2023-45283](https://github.com/advisories/GHSA-vvjp-q62m-2vph "CVE-2023-45283"), and [CVE-2023-45288](https://github.com/advisories/GHSA-4v7x-pqxf-cx7m "CVE-2023-45288")
- Fixed a bug where incorrect results are returned when executing SELECT queries with the same column names.

##### ScalarDB GraphQL

- Upgraded the base image to fix security issues. [CVE-2023-47038](https://github.com/advisories/GHSA-96fh-9q43-rmjh "CVE-2023-47038")

##### ScalarDB SQL

- Upgraded the base image to fix security issues. [CVE-2023-47038](https://github.com/advisories/GHSA-96fh-9q43-rmjh "CVE-2023-47038")
- Fixes a bug that Spring Data JDBC for ScalarDB doesn't work with Spring Boot 3
- Fixed a bug where incorrect results are returned when executing SELECT queries with the same column names.
- Upgraded `grpc_health_probe` to fix security issues. [CVE-2024-24790](https://github.com/advisories/GHSA-49gw-vxvf-fc2g "CVE-2024-24790"), [CVE-2023-45283](https://github.com/advisories/GHSA-vvjp-q62m-2vph "CVE-2023-45283"), and [CVE-2023-45288](https://github.com/advisories/GHSA-4v7x-pqxf-cx7m "CVE-2023-45288")
